# catalyst-sdwan-sdk-examples

./: .gitignore  DEMO.md  README.md  alarms.py  apps.py  backup.py  backup_raw.py  config-groups-raw.py  config-groups.py  device_api.py  device_raw.py  devices.py  omp.py  pyproject.toml  raw.py  requirements.txt  session.py
outputs/: data.txt  output-api.txt  output-raw.json
